--- a/index.html
+++ b/index.html
@@ -2,15 +2,71 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.ico" sizes="any" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index,follow" />
+    <meta
+      name="description"
+      content="Digital Logistics is a technology-driven logistics partner offering true door-to-door global delivery with real-time tracking and reliable shipping."
+    />
+
+    <link rel="canonical" href="https://digital-delivery.netlify.app/" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Digital Logistics" />
+    <meta property="og:title" content="Digital Logistics | Door-to-Door Global Delivery" />
+    <meta
+      property="og:description"
+      content="Technology-driven logistics with true door-to-door global delivery, live updates, and reliable shipping."
+    />
+    <meta property="og:url" content="https://digital-delivery.netlify.app/" />
+    <meta property="og:image" content="https://digital-delivery.netlify.app/vite.svg" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Digital Logistics | Door-to-Door Global Delivery" />
+    <meta
+      name="twitter:description"
+      content="Technology-driven logistics with true door-to-door global delivery, live updates, and reliable shipping."
+    />
+    <meta name="twitter:image" content="https://digital-delivery.netlify.app/vite.svg" />
+
+    <!-- Organization schema -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Digital Logistics",
+        "url": "https://digital-delivery.netlify.app/",
+        "logo": "https://digital-delivery.netlify.app/vite.svg"
+      }
+    </script>
+
+    <script>
+      (function () {
+        try {
+          var origin = window.location.origin;
+          var path = window.location.pathname || "/";
+          var canonicalUrl = origin + path;
+
+          var canonical = document.querySelector('link[rel="canonical"]');
+          if (canonical) canonical.setAttribute("href", canonicalUrl);
+
+          var ogUrl = document.querySelector('meta[property="og:url"]');
+          if (ogUrl) ogUrl.setAttribute("content", canonicalUrl);
+        } catch (e) {
+          // ignore
+        }
+      })();
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&family=Alegreya:ital,wght@0,400..900;1,400..900&display=swap"
       rel="stylesheet"
     />
-    <title>DigitalLogistics</title>
+    <title>Digital Logistics | Door-to-Door Global Delivery</title>
   </head>
   <body>
     <div id="root"></div>
