--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -15,22 +15,34 @@
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Digital Logistics" />
-    <meta property="og:title" content="Digital Logistics | Door-to-Door Global Delivery" />
+    <meta
+      property="og:title"
+      content="Digital Logistics | Door-to-Door Global Delivery"
+    />
     <meta
       property="og:description"
       content="Technology-driven logistics with true door-to-door global delivery, live updates, and reliable shipping."
     />
     <meta property="og:url" content="https://digital-delivery.netlify.app/" />
-    <meta property="og:image" content="https://digital-delivery.netlify.app/vite.svg" />
+    <meta
+      property="og:image"
+      content="https://digital-delivery.netlify.app/logo.png"
+    />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Digital Logistics | Door-to-Door Global Delivery" />
+    <meta
+      name="twitter:title"
+      content="Digital Logistics | Door-to-Door Global Delivery"
+    />
     <meta
       name="twitter:description"
       content="Technology-driven logistics with true door-to-door global delivery, live updates, and reliable shipping."
     />
-    <meta name="twitter:image" content="https://digital-delivery.netlify.app/vite.svg" />
+    <meta
+      name="twitter:image"
+      content="https://digital-delivery.netlify.app/logo.png"
+    />
 
     <!-- Organization schema -->
     <script type="application/ld+json">
@@ -39,7 +51,7 @@
         "@type": "Organization",
         "name": "Digital Logistics",
         "url": "https://digital-delivery.netlify.app/",
-        "logo": "https://digital-delivery.netlify.app/vite.svg"
+        "logo": "https://digital-delivery.netlify.app/logo.png"
       }
     </script>
 
