--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <meta name="robots" content="index,follow" />
     <meta
       name="description"
-      content="Digital Logistics is a technology-driven logistics partner offering true door-to-door global delivery with real-time tracking and reliable shipping."
+      content="Digital Delivery is a technology-driven logistics partner offering true door-to-door global delivery with real-time tracking and reliable shipping."
     />
 
     <link rel="canonical" href="https://digital-delivery.netlify.app/" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Digital Logistics" />
+    <meta property="og:site_name" content="Digital Delivery" />
     <meta
       property="og:title"
-      content="Digital Logistics | Door-to-Door Global Delivery"
+      content="Digital Delivery | Door-to-Door Global Delivery"
     />
     <meta
       property="og:description"
@@ -33,7 +33,7 @@
     <meta name="twitter:card" content="summary" />
     <meta
       name="twitter:title"
-      content="Digital Logistics | Door-to-Door Global Delivery"
+      content="Digital Delivery | Door-to-Door Global Delivery"
     />
     <meta
       name="twitter:description"
@@ -49,7 +49,7 @@
       {
         "@context": "https://schema.org",
         "@type": "Organization",
-        "name": "Digital Logistics",
+        "name": "Digital Delivery",
         "url": "https://digital-delivery.netlify.app/",
         "logo": "https://digital-delivery.netlify.app/logo.png"
       }
@@ -78,7 +78,7 @@
       href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&family=Alegreya:ital,wght@0,400..900;1,400..900&display=swap"
       rel="stylesheet"
     />
-    <title>Digital Logistics | Door-to-Door Global Delivery</title>
+    <title>Digital Delivery | Door-to-Door Global Delivery</title>
   </head>
   <body>
     <div id="root"></div>
