--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         "@type": "Organization",
         "name": "Digital Delivery",
         "url": "https://digitaldelivery.org/",
-        "logo": "https://digitaldelivery.org/logo.png"
+        "logo": "https://digitaldelivery.org/logo.png",
+        "areaServed": "Worldwide"
       }
     </script>
 
@@ -76,7 +77,9 @@
       rel="stylesheet"
     />
 
-    <title>Digital Delivery | Door-to-Door Global Delivery</title>
+    <title>
+      Digital Delivery | International Logistics & Real-Time Shipment Tracking
+    </title>
   </head>
   <body>
     <div id="root"></div>
