--- a/index.html
+++ b/index.html
@@ -1,80 +1,87 @@
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" href="/favicon.ico" sizes="any" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="robots" content="index,follow" />
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index,follow" />
 
-  <meta
-    name="description"
-    content="Digital Delivery is a Nigeria-based international logistics company offering fast door-to-door shipping, real-time shipment tracking, customs clearance support, and reliable cross-border delivery worldwide."
-  />
+    <meta
+      name="description"
+      content="Digital Delivery is a Nigeria-based international logistics company offering fast door-to-door shipping, real-time shipment tracking, customs clearance support, and reliable cross-border delivery worldwide."
+    />
 
-  <link rel="canonical" href="https://digitaldelivery.org/" />
+    <link rel="canonical" href="https://digitaldelivery.org/" />
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Digital Delivery" />
-  <meta
-    property="og:title"
-    content="Digital Delivery | International Logistics & Real-Time Shipment Tracking"
-  />
-  <meta
-    property="og:description"
-    content="Digital Delivery is a Nigeria-based international logistics company offering fast door-to-door shipping, real-time shipment tracking, customs clearance support, and reliable cross-border delivery worldwide."
-  />
-  <meta property="og:url" content="https://digitaldelivery.org/" />
-  <meta property="og:image" content="https://digitaldelivery.org/logo.png" />
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Digital Delivery" />
+    <meta
+      property="og:title"
+      content="Digital Delivery | International Logistics & Real-Time Shipment Tracking"
+    />
+    <meta
+      property="og:description"
+      content="Digital Delivery is a Nigeria-based international logistics company offering fast door-to-door shipping, real-time shipment tracking, customs clearance support, and reliable cross-border delivery worldwide."
+    />
+    <meta property="og:url" content="https://digitaldelivery.org/" />
+    <meta property="og:image" content="https://digitaldelivery.org/logo.png" />
 
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta
-    name="twitter:title"
-    content="Digital Delivery | International Logistics & Real-Time Shipment Tracking"
-  />
-  <meta
-    name="twitter:description"
-    content="Digital Delivery is a Nigeria-based international logistics company offering fast door-to-door shipping, real-time shipment tracking, customs clearance support, and reliable cross-border delivery worldwide."
-  />
-  <meta name="twitter:image" content="https://digitaldelivery.org/logo.png" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Digital Delivery | International Logistics & Real-Time Shipment Tracking"
+    />
+    <meta
+      name="twitter:description"
+      content="Digital Delivery is a Nigeria-based international logistics company offering fast door-to-door shipping, real-time shipment tracking, customs clearance support, and reliable cross-border delivery worldwide."
+    />
+    <meta name="twitter:image" content="https://digitaldelivery.org/logo.png" />
 
-  <!-- Organization schema -->
-  <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "LogisticsBusiness",
-      "name": "Digital Delivery",
-      "url": "https://digitaldelivery.org/",
-      "logo": "https://digitaldelivery.org/logo.png",
-      "areaServed": "Worldwide",
-      "description": "Nigeria-based international logistics company offering door-to-door shipping and real-time shipment tracking."
-    }
-  </script>
+    <!-- Organization schema -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LogisticsBusiness",
+        "name": "Digital Delivery",
+        "url": "https://digitaldelivery.org/",
+        "logo": "https://digitaldelivery.org/logo.png",
+        "areaServed": "Worldwide",
+        "description": "Nigeria-based international logistics company offering door-to-door shipping and real-time shipment tracking."
+      }
+    </script>
 
-  <!-- Optional: keep canonical/og:url synced with route -->
-  <script>
-    (function () {
-      try {
-        var origin = "https://digitaldelivery.org";
-        var path = window.location.pathname || "/";
-        var canonicalUrl = origin + path;
+    <!-- Optional: keep canonical/og:url synced with route -->
+    <script>
+      (function () {
+        try {
+          var origin = "https://digitaldelivery.org";
+          var path = window.location.pathname || "/";
+          var canonicalUrl = origin + path;
 
-        var canonical = document.querySelector('link[rel="canonical"]');
-        if (canonical) canonical.setAttribute("href", canonicalUrl);
+          var canonical = document.querySelector('link[rel="canonical"]');
+          if (canonical) canonical.setAttribute("href", canonicalUrl);
 
-        var ogUrl = document.querySelector('meta[property="og:url"]');
-        if (ogUrl) ogUrl.setAttribute("content", canonicalUrl);
-      } catch (e) {}
-    })();
-  </script>
+          var ogUrl = document.querySelector('meta[property="og:url"]');
+          if (ogUrl) ogUrl.setAttribute("content", canonicalUrl);
+        } catch (e) {}
+      })();
+    </script>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&family=Alegreya:ital,wght@0,400..900;1,400..900&display=swap"
-    rel="stylesheet"
-  />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&family=Alegreya:ital,wght@0,400..900;1,400..900&display=swap"
+      rel="stylesheet"
+    />
 
-  <title>
-    Digital Delivery | International Logistics & Real-Time Shipment Tracking
-  </title>
-</head>
+    <title>
+      Digital Delivery | International Logistics & Real-Time Shipment Tracking
+    </title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
