--- a/index.html
+++ b/index.html
@@ -2,16 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" sizes="any" />
+
+    <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Indexing -->
     <meta name="robots" content="index,follow" />
 
+    <!-- Title / Description -->
+    <title>
+      Digital Delivery | International Logistics & Real-Time Shipment Tracking
+    </title>
     <meta
       name="description"
       content="Digital Delivery is a Nigeria-based international logistics company offering fast door-to-door shipping, real-time shipment tracking, customs clearance support, and reliable cross-border delivery worldwide."
     />
 
+    <!-- Canonical -->
     <link rel="canonical" href="https://digitaldelivery.org/" />
+
+    <!-- Favicons (make sure these files exist in /public) -->
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+
+    <!-- Manifest (optional but good practice) -->
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="theme-color" content="#0b1220" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
@@ -26,6 +45,7 @@
     />
     <meta property="og:url" content="https://digitaldelivery.org/" />
     <meta property="og:image" content="https://digitaldelivery.org/logo.png" />
+    <meta property="og:image:alt" content="Digital Delivery logo" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -39,7 +59,7 @@
     />
     <meta name="twitter:image" content="https://digitaldelivery.org/logo.png" />
 
-    <!-- Organization schema -->
+    <!-- Organization / Business schema -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -47,39 +67,22 @@
         "name": "Digital Delivery",
         "url": "https://digitaldelivery.org/",
         "logo": "https://digitaldelivery.org/logo.png",
+        "image": "https://digitaldelivery.org/logo.png",
+        "description": "Nigeria-based international logistics company offering door-to-door shipping and real-time shipment tracking.",
         "areaServed": "Worldwide",
-        "description": "Nigeria-based international logistics company offering door-to-door shipping and real-time shipment tracking."
+        "sameAs": []
       }
     </script>
 
-    <!-- Optional: keep canonical/og:url synced with route -->
-    <script>
-      (function () {
-        try {
-          var origin = "https://digitaldelivery.org";
-          var path = window.location.pathname || "/";
-          var canonicalUrl = origin + path;
-
-          var canonical = document.querySelector('link[rel="canonical"]');
-          if (canonical) canonical.setAttribute("href", canonicalUrl);
-
-          var ogUrl = document.querySelector('meta[property="og:url"]');
-          if (ogUrl) ogUrl.setAttribute("content", canonicalUrl);
-        } catch (e) {}
-      })();
-    </script>
-
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&family=Alegreya:ital,wght@0,400..900;1,400..900&display=swap"
       rel="stylesheet"
     />
-
-    <title>
-      Digital Delivery | International Logistics & Real-Time Shipment Tracking
-    </title>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
